[gd_scene load_steps=10 format=4 uid="uid://djv4s1pjcg3s"]

[ext_resource type="Script" uid="uid://dng0msak83tjp" path="res://Scripts/Game/game.gd" id="1_qxfds"]
[ext_resource type="Texture2D" uid="uid://cuywl1506fvab" path="res://sprites/bg placeholder.jpg" id="2_qikps"]
[ext_resource type="PackedScene" uid="uid://btv0g0dg01wpq" path="res://Scenes/Game/mage_spawner.tscn" id="3_qikps"]
[ext_resource type="TileSet" uid="uid://c1ax8ijoh1yes" path="res://resources/tilemap.tres" id="3_vifcx"]
[ext_resource type="PackedScene" uid="uid://c6goqr4g2vvhh" path="res://Scenes/Game/drop_zone.tscn" id="4_i1e5p"]
[ext_resource type="Script" uid="uid://yrp4rrw7tn7b" path="res://Scripts/Game/ui.gd" id="5_ciybh"]
[ext_resource type="PackedScene" uid="uid://dskxqqcfxuul6" path="res://Scenes/Game/modal.tscn" id="6_flgk0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxfds"]
size = Vector2(1252.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qikps"]
size = Vector2(20, 722)

[node name="Game" type="Node2D" node_paths=PackedStringArray("spawners")]
script = ExtResource("1_qxfds")
spawners = [NodePath("MageSpawner"), NodePath("MageSpawner2")]

[node name="BG" type="Sprite2D" parent="."]
visible = false
position = Vector2(610.5, 352.5)
scale = Vector2(0.761875, 0.57965)
texture = ExtResource("2_qikps")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAIAAAAgAAoAAAAAAAMAAAAgAAoAAAAAAAQAAAAgAAoAAAAAAAUAAAAgAAoAAAAAAAYAAAAgAAoAAAAAAAcAAAAgAAoAAAAAAAgAAAAgAAoAAAAAAAkAAAAgAAoAAAAAAAoAAAAgAAoAAAABAAIAAAAgAAoAAAABAAMAAAAgAAoAAAABAAQAAAAgAAoAAAABAAUAAAAgAAoAAAABAAYAAAAgAAoAAAABAAcAAAAgAAoAAAABAAgAAAAgAAoAAAABAAkAAAAgAAoAAAABAAoAAAAgAAoAAAACAAIAAAAgAAoAAAACAAMAAAAgAAoAAAACAAQAAAAgAAoAAAACAAUAAAAgAAoAAAACAAYAAAAgAAoAAAACAAcAAAAgAAoAAAACAAgAAAAgAAoAAAACAAkAAAAgAAoAAAACAAoAAAAgAAoAAAADAAIAAAAgAAoAAAADAAMAAAAgAAoAAAADAAQAAAAgAAoAAAADAAUAAAAgAAoAAAADAAYAAAAgAAoAAAADAAcAAAAgAAoAAAADAAgAAAAgAAoAAAADAAkAAAAgAAoAAAADAAoAAAAgAAoAAAAEAAIAAAAgAAoAAAAEAAMAAAAgAAoAAAAEAAQAAAAgAAoAAAAEAAUAAAAgAAoAAAAEAAYAAAAgAAoAAAAEAAcAAAAgAAoAAAAEAAgAAAAgAAoAAAAEAAkAAAAgAAoAAAAEAAoAAAAgAAoAAAAFAAIAAAAgAAoAAAAFAAMAAAAgAAoAAAAFAAQAAAAgAAoAAAAFAAUAAAAgAAoAAAAFAAYAAAAgAAoAAAAFAAcAAAAgAAoAAAAFAAgAAAAgAAoAAAAFAAkAAAAgAAoAAAAFAAoAAAAgAAoAAAAGAAIAAAAgAAoAAAAGAAMAAAAgAAoAAAAGAAQAAAAgAAoAAAAGAAUAAAAgAAoAAAAGAAYAAAAgAAoAAAAGAAcAAAAgAAoAAAAGAAgAAAAgAAoAAAAGAAkAAAAgAAoAAAAGAAoAAAAgAAoAAAAHAAIAAAAgAAoAAAAHAAMAAAAgAAoAAAAHAAQAAAAgAAoAAAAHAAUAAAAgAAoAAAAHAAYAAAAgAAoAAAAHAAcAAAAgAAoAAAAHAAgAAAAgAAoAAAAHAAkAAAAgAAoAAAAHAAoAAAAgAAoAAAAIAAIAAAAgAAoAAAAIAAMAAAAgAAoAAAAIAAQAAAAgAAoAAAAIAAUAAAAgAAoAAAAIAAYAAAAgAAoAAAAIAAcAAAAgAAoAAAAIAAgAAAAgAAoAAAAIAAkAAAAgAAoAAAAIAAoAAAAgAAoAAAAJAAIAAAAgAAoAAAAJAAMAAAAgAAoAAAAJAAQAAAAgAAoAAAAJAAUAAAAgAAoAAAAJAAYAAAAgAAoAAAAJAAcAAAAgAAoAAAAJAAgAAAAgAAoAAAAJAAkAAAAgAAoAAAAJAAoAAAAgAAoAAAAKAAIAAAAgAAoAAAAKAAMAAAAgAAoAAAAKAAQAAAAgAAoAAAAKAAUAAAAgAAoAAAAKAAYAAAAgAAoAAAAKAAcAAAAgAAoAAAAKAAgAAAAgAAoAAAAKAAkAAAAgAAoAAAAKAAoAAAAgAAoAAAALAAIAAAAgAAoAAAALAAMAAAAgAAoAAAALAAQAAAAgAAoAAAALAAUAAAAgAAoAAAALAAYAAAAgAAoAAAALAAcAAAAgAAoAAAALAAgAAAAgAAoAAAALAAkAAAAgAAoAAAALAAoAAAAgAAoAAAAMAAIAAAAgAAoAAAAMAAMAAAAgAAoAAAAMAAQAAAAgAAoAAAAMAAUAAAAgAAoAAAAMAAYAAAAgAAoAAAAMAAcAAAAgAAoAAAAMAAgAAAAgAAoAAAAMAAkAAAAgAAoAAAAMAAoAAAAgAAoAAAANAAIAAAAgAAoAAAANAAMAAAAgAAoAAAANAAQAAAAgAAoAAAANAAUAAAAgAAoAAAANAAYAAAAgAAoAAAANAAcAAAAgAAoAAAANAAgAAAAgAAoAAAANAAkAAAAgAAoAAAANAAoAAAAgAAoAAAAOAAIAAAAgAAoAAAAOAAMAAAAgAAoAAAAOAAQAAAAgAAoAAAAOAAUAAAAgAAoAAAAOAAYAAAAgAAoAAAAOAAcAAAAgAAoAAAAOAAgAAAAgAAoAAAAOAAkAAAAgAAoAAAAOAAoAAAAgAAoAAAAPAAIAAAAgAAoAAAAPAAMAAAAgAAoAAAAPAAQAAAAgAAoAAAAPAAUAAAAgAAoAAAAPAAYAAAAgAAoAAAAPAAcAAAAgAAoAAAAPAAgAAAAgAAoAAAAPAAkAAAAgAAoAAAAPAAoAAAAgAAoAAAAQAAIAAAAgAAoAAAAQAAMAAAAgAAoAAAAQAAQAAAAgAAoAAAAQAAUAAAAgAAoAAAAQAAYAAAAgAAoAAAAQAAcAAAAgAAoAAAAQAAgAAAAgAAoAAAAQAAkAAAAgAAoAAAAQAAoAAAAgAAoAAAARAAIAAAAgAAoAAAARAAMAAAAgAAoAAAARAAQAAAAgAAoAAAARAAUAAAAgAAoAAAARAAYAAAAgAAoAAAARAAcAAAAgAAoAAAARAAgAAAAgAAoAAAARAAkAAAAgAAoAAAARAAoAAAAgAAoAAAASAAIAAAAgAAoAAAASAAMAAAAgAAoAAAASAAQAAAAgAAoAAAASAAUAAAAgAAoAAAASAAYAAAAgAAoAAAASAAcAAAAgAAoAAAASAAgAAAAgAAoAAAASAAkAAAAgAAoAAAASAAoAAAAgAAoAAAAAAAEAAAAgAAoAAAABAAEAAAAgAAoAAAACAAEAAAAgAAoAAAADAAEAAAAgAAoAAAAEAAEAAAAgAAoAAAAFAAEAAAAgAAoAAAAGAAEAAAAgAAoAAAAHAAEAAAAgAAoAAAAIAAEAAAAgAAoAAAAJAAEAAAAgAAoAAAAKAAEAAAAgAAoAAAALAAEAAAAgAAoAAAAMAAEAAAAgAAoAAAANAAEAAAAgAAoAAAAOAAEAAAAgAAoAAAAPAAEAAAAgAAoAAAAQAAEAAAAgAAoAAAARAAEAAAAgAAoAAAASAAEAAAAgAAoAAAASAAAAAAAgAAoAAAARAAAAAAAgAAoAAAAQAAAAAAAgAAoAAAAPAAAAAAAgAAoAAAAOAAAAAAAgAAoAAAANAAAAAAAgAAoAAAAMAAAAAAAgAAoAAAALAAAAAAAgAAoAAAAKAAAAAAAgAAoAAAAJAAAAAAAgAAoAAAAIAAAAAAAgAAoAAAAHAAAAAAAgAAoAAAAGAAAAAAAgAAoAAAAFAAAAAAAgAAoAAAAEAAAAAAAgAAoAAAADAAAAAAAgAAoAAAACAAAAAAAgAAoAAAABAAAAAAAgAAoAAAAAAAAAAAAgAAoAAAASAAsAAAAgAAoAAAARAAsAAAAgAAoAAAAQAAsAAAAgAAoAAAAPAAsAAAAgAAoAAAAOAAsAAAAgAAoAAAANAAsAAAAgAAoAAAAMAAsAAAAgAAoAAAALAAsAAAAgAAoAAAAKAAsAAAAgAAoAAAAJAAsAAAAgAAoAAAAIAAsAAAAgAAoAAAAHAAsAAAAgAAoAAAAGAAsAAAAgAAoAAAAFAAsAAAAgAAoAAAAEAAsAAAAgAAoAAAADAAsAAAAgAAoAAAACAAsAAAAgAAoAAAABAAsAAAAgAAoAAAAAAAsAAAAgAAoAAAA=")
tile_set = ExtResource("3_vifcx")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAFAAIAAAACAAMAAAAGAAIAAAACAAMAAAAHAAIAAAACAAMAAAAIAAIAAAACAAMAAAAJAAIAAAACAAMAAAAKAAIAAAACAAMAAAALAAIAAAACAAMAAAAMAAIAAAACAAMAAAANAAIAAAACAAMAAAAOAAIAAAAEAAMAAAAFAAoAAAABAAUAAAAGAAoAAAACAAUAAAAHAAoAAAACAAUAAAAIAAoAAAACAAUAAAAJAAoAAAACAAUAAAAKAAoAAAACAAUAAAALAAoAAAACAAUAAAAMAAoAAAACAAUAAAANAAoAAAADAAUAAAAOAAoAAAAEAAUAAAAHAAYAAAACAAMAAAAHAAUAAAACAAMAAAAHAAQAAAACAAMAAAAHAAMAAAACAAMAAAAGAAMAAAACAAMAAAAFAAMAAAACAAMAAAAEAAQAAAAAAAMAAAAEAAUAAAAAAAMAAAAEAAYAAAAAAAMAAAAEAAgAAAAAAAMAAAAEAAcAAAAAAAMAAAAFAAcAAAACAAMAAAAFAAYAAAACAAMAAAAFAAUAAAACAAMAAAAFAAQAAAACAAMAAAAGAAQAAAACAAMAAAAGAAUAAAACAAMAAAAGAAYAAAACAAMAAAAGAAcAAAACAAMAAAAGAAgAAAACAAMAAAAFAAgAAAACAAMAAAAFAAkAAAABAAQAAAAGAAkAAAACAAMAAAAHAAkAAAACAAMAAAAHAAgAAAACAAMAAAAHAAcAAAACAAMAAAAIAAcAAAACAAMAAAAIAAYAAAACAAMAAAAIAAUAAAACAAMAAAAIAAQAAAACAAMAAAAIAAMAAAACAAMAAAAJAAMAAAACAAMAAAAJAAQAAAACAAMAAAAJAAUAAAACAAMAAAAJAAYAAAACAAMAAAAJAAcAAAACAAMAAAAJAAgAAAACAAMAAAAIAAgAAAACAAMAAAAIAAkAAAACAAMAAAAJAAkAAAACAAMAAAAKAAkAAAACAAMAAAAKAAgAAAACAAMAAAAKAAcAAAACAAMAAAAKAAYAAAACAAMAAAAKAAUAAAACAAMAAAAKAAQAAAACAAMAAAAKAAMAAAACAAMAAAALAAMAAAACAAMAAAALAAQAAAACAAMAAAALAAUAAAACAAMAAAALAAYAAAACAAMAAAALAAcAAAACAAMAAAALAAgAAAACAAMAAAALAAkAAAACAAMAAAAMAAkAAAACAAMAAAAMAAgAAAACAAMAAAAMAAcAAAACAAMAAAAMAAYAAAACAAMAAAAMAAUAAAACAAMAAAAMAAQAAAACAAMAAAAMAAMAAAACAAMAAAANAAMAAAACAAMAAAANAAQAAAACAAMAAAANAAUAAAACAAMAAAANAAYAAAACAAMAAAANAAcAAAACAAMAAAANAAgAAAACAAMAAAANAAkAAAADAAQAAAAOAAkAAAAEAAQAAAAOAAgAAAAEAAMAAAAOAAcAAAAEAAMAAAAOAAYAAAAEAAMAAAAOAAUAAAAEAAMAAAAOAAQAAAAEAAMAAAAOAAMAAAAEAAMAAAAFAAEAAAACAAMAAAAGAAEAAAACAAMAAAAHAAEAAAACAAMAAAAIAAEAAAACAAMAAAAJAAEAAAACAAMAAAAKAAEAAAACAAMAAAALAAEAAAACAAMAAAAMAAEAAAACAAMAAAANAAEAAAACAAMAAAAOAAEAAAAEAAMAAAAEAAIAAAAAAAMAAAAEAAMAAAAAAAMAAAAEAAAAAAAAAAIAAAAFAP//AAABAAEAAAAFAAAAAAABAAIAAAAEAAEAAAAAAAMAAAAGAP//AAACAAEAAAAHAP//AAACAAEAAAAIAP//AAACAAEAAAAJAP//AAACAAEAAAAKAP//AAACAAEAAAALAP//AAACAAEAAAAMAP//AAACAAEAAAANAP//AAADAAEAAAANAAAAAAADAAIAAAAOAAAAAAAEAAIAAAAEAAkAAAAAAAQAAAAEAAoAAAAAAAUAAAAGAAAAAAACAAMAAAAHAAAAAAACAAMAAAAIAAAAAAACAAMAAAAJAAAAAAACAAMAAAAKAAAAAAACAAMAAAALAAAAAAACAAMAAAAMAAAAAAACAAMAAAD//wIAAAAAAAIAAAD//wMAAAAAAAMAAAD//wQAAAAAAAMAAAD//wUAAAAAAAMAAAD//wYAAAAAAAMAAAD//wcAAAAAAAQAAAD//wgAAAAAAAUAAAD//wkAAAAAAAYAAAAAAAEAAAABAAEAAAAAAAIAAAABAAIAAAAAAAMAAAABAAMAAAAAAAQAAAABAAMAAAAAAAUAAAABAAMAAAAAAAYAAAABAAMAAAAAAAcAAAABAAQAAAAAAAgAAAABAAUAAAAAAAkAAAABAAYAAAAAAAoAAAABAAcAAAABAAEAAAACAAEAAAABAAIAAAACAAIAAAABAAMAAAACAAMAAAABAAQAAAACAAMAAAABAAUAAAACAAMAAAABAAYAAAACAAMAAAABAAcAAAACAAQAAAABAAgAAAACAAUAAAABAAkAAAACAAYAAAABAAoAAAACAAcAAAACAAEAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAQAAAADAAMAAAACAAUAAAADAAMAAAACAAYAAAADAAMAAAACAAcAAAADAAQAAAACAAgAAAADAAUAAAACAAkAAAADAAYAAAACAAoAAAADAAcAAAADAAIAAAAEAAIAAAADAAMAAAAEAAMAAAADAAQAAAAEAAMAAAADAAUAAAAEAAMAAAADAAYAAAAEAAMAAAADAAcAAAAEAAQAAAADAAgAAAAEAAUAAAADAAkAAAAEAAYAAAAPAAIAAAAAAAIAAAAPAAMAAAAAAAMAAAAPAAQAAAAAAAMAAAAPAAUAAAAAAAMAAAAPAAYAAAAAAAMAAAAPAAcAAAAAAAQAAAAPAAgAAAAAAAUAAAAPAAkAAAAAAAYAAAAQAAEAAAABAAEAAAAQAAIAAAABAAIAAAAQAAMAAAABAAMAAAAQAAQAAAABAAMAAAAQAAUAAAABAAMAAAAQAAYAAAABAAMAAAAQAAcAAAABAAQAAAAQAAgAAAABAAUAAAAQAAkAAAABAAYAAAAQAAoAAAABAAcAAAARAAEAAAACAAEAAAARAAIAAAACAAIAAAARAAMAAAACAAMAAAARAAQAAAACAAMAAAARAAUAAAACAAMAAAARAAYAAAACAAMAAAARAAcAAAACAAQAAAARAAgAAAACAAUAAAARAAkAAAACAAYAAAARAAoAAAACAAcAAAASAAEAAAADAAEAAAASAAIAAAADAAIAAAASAAMAAAADAAMAAAASAAQAAAADAAMAAAASAAUAAAADAAMAAAASAAYAAAADAAMAAAASAAcAAAADAAQAAAASAAgAAAADAAUAAAASAAkAAAADAAYAAAASAAoAAAADAAcAAAATAAIAAAAEAAIAAAATAAMAAAAEAAMAAAATAAQAAAAEAAMAAAATAAUAAAAEAAMAAAATAAYAAAAEAAMAAAATAAcAAAAEAAQAAAATAAgAAAAEAAUAAAATAAkAAAAEAAYAAAA=")
tile_set = ExtResource("3_vifcx")

[node name="TileMapLayer" type="TileMapLayer" parent="TileMapLayer"]
tile_map_data = PackedByteArray("AAAGAP//AAAsAA4AAAAGAAAAAAAsAA8AAAAGAAEAAAAsABAAAAAHAP//AAAnABEAAAAHAAAAAAAnABIAAAAHAAEAAAAnABMAAAAIAP//AAAoABEAAAAIAAAAAAAoABIAAAAIAAEAAAAoABMAAAAJAP//AAApABEAAAAJAAAAAAApABIAAAAJAAEAAAApABMAAAAKAP//AAAqABEAAAAKAAAAAAAqABIAAAAKAAEAAAAqABMAAAALAP//AAArABEAAAALAAAAAAArABIAAAALAAEAAAArABMAAAAAAP//AAAnAA4AAAAAAAAAAAAnAA8AAAAAAAEAAAAnABAAAAABAP//AAAnAA4AAAABAAAAAAAnAA8AAAABAAEAAAAnABAAAAACAP//AAAoAA4AAAACAAAAAAAoAA8AAAACAAEAAAAoABAAAAADAP//AAApAA4AAAADAAAAAAApAA8AAAADAAEAAAApABAAAAAEAP//AAAqAA4AAAAEAAAAAAAqAA8AAAAEAAEAAAAqABAAAAAFAP//AAArAA4AAAAFAAAAAAArAA8AAAAFAAEAAAArABAAAAAMAP//AAAsABEAAAAMAAAAAAAsABIAAAAMAAEAAAAsABMAAAANAP//AAAnAA4AAAANAAAAAAAnAA8AAAANAAEAAAAnABAAAAAOAP//AAAoAA4AAAAOAAAAAAAoAA8AAAAOAAEAAAAoABAAAAAPAP//AAApAA4AAAAPAAAAAAApAA8AAAAPAAEAAAApABAAAAAQAP//AAAqAA4AAAAQAAAAAAAqAA8AAAAQAAEAAAAqABAAAAARAP//AAArAA4AAAARAAAAAAArAA8AAAARAAEAAAArABAAAAASAP//AAAsAA4AAAASAAAAAAAsAA8AAAASAAEAAAAsABAAAAATAP//AAAoAA4AAAATAAAAAAAoAA8AAAATAAEAAAAoABAAAAAUAP//AAApAA4AAAAUAAAAAAApAA8AAAAUAAEAAAApABAAAAAVAP//AAAqAA4AAAAVAAAAAAAqAA8AAAAVAAEAAAAqABAAAAAWAP//AAArAA4AAAAWAAAAAAArAA8AAAAWAAEAAAArABAAAAAXAP//AAAsAA4AAAAXAAAAAAAsAA8AAAAXAAEAAAAsABAAAAA=")
tile_set = ExtResource("3_vifcx")

[node name="MageSpawner" parent="." instance=ExtResource("3_qikps")]
position = Vector2(639, -50)
direction = Vector2(0, 1)

[node name="MageSpawner2" parent="." instance=ExtResource("3_qikps")]
position = Vector2(580, 715)
direction = Vector2(0, -1)

[node name="MageSpawnTime" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DropZone" parent="." instance=ExtResource("4_i1e5p")]
position = Vector2(124, 337)
type = "red"
exit_dir = Vector2(-1, 0)

[node name="ColorRect" type="ColorRect" parent="DropZone"]
offset_left = -120.0
offset_top = -197.0
offset_right = 129.0
offset_bottom = 195.0
color = Color(1, 0.203922, 0.14902, 0.498039)

[node name="DropZone2" parent="." instance=ExtResource("4_i1e5p")]
position = Vector2(1094, 337)
exit_dir = Vector2(1, 0)

[node name="ColorRect2" type="ColorRect" parent="DropZone2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -196.0
offset_right = 124.5
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.380019, 0.537856, 0.92985, 0.498039)

[node name="Border" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2(609.5, 108)
shape = SubResource("RectangleShape2D_qxfds")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2(594.75, 709)
shape = SubResource("RectangleShape2D_qxfds")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2(264, 383)
shape = SubResource("RectangleShape2D_qikps")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border"]
position = Vector2(954, 345)
shape = SubResource("RectangleShape2D_qikps")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_ciybh")

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -189.0
offset_bottom = 45.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="Label" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Puntos: "
horizontal_alignment = 2

[node name="Points_Lbl" type="Label" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="Modal" parent="UI" instance=ExtResource("6_flgk0")]
visible = false

[connection signal="timeout" from="MageSpawnTime" to="." method="_on_mage_spawn_time_timeout"]
